{
  "version": 4,
  "terraform_version": "1.14.8",
  "serial": 36,
  "lineage": "620a93e9-4ccc-e5ba-4284-c74482984dc4",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:872253065579:internet-gateway/igw-0e20d8b5bcad6ff2f",
            "id": "igw-0e20d8b5bcad6ff2f",
            "owner_id": "872253065579",
            "tags": {
              "Name": "watchweave-igw"
            },
            "tags_all": {
              "Name": "watchweave-igw"
            },
            "vpc_id": "vpc-0019715cede0fc3f7"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:872253065579:route-table/rtb-080a1f5bcc8942991",
            "id": "rtb-080a1f5bcc8942991",
            "owner_id": "872253065579",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e20d8b5bcad6ff2f",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "watchweave-public-rt"
            },
            "tags_all": {
              "Name": "watchweave-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0019715cede0fc3f7"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-089ff26103c49674b",
            "route_table_id": "rtb-080a1f5bcc8942991",
            "subnet_id": "subnet-0b4f8435244e0d1e4"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public_1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00f420b78098490f3",
            "route_table_id": "rtb-080a1f5bcc8942991",
            "subnet_id": "subnet-07261b75c31f02c9f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public_2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:872253065579:security-group/sg-0e9e3099d895f8d80",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e9e3099d895f8d80",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 5000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "watchweave-ecs-sg",
            "name_prefix": "",
            "owner_id": "872253065579",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "watchweave-ecs-sg"
            },
            "tags_all": {
              "Name": "watchweave-ecs-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0019715cede0fc3f7"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:872253065579:security-group/sg-0c6d1655cf29483f1",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0c6d1655cf29483f1",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0e9e3099d895f8d80"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "watchweave-rds-sg",
            "name_prefix": "",
            "owner_id": "872253065579",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "watchweave-rds-sg"
            },
            "tags_all": {
              "Name": "watchweave-rds-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0019715cede0fc3f7"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.ecs",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "redis",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:872253065579:security-group/sg-0ce9825d26fd1aafc",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0ce9825d26fd1aafc",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 6379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0e9e3099d895f8d80"
                ],
                "self": false,
                "to_port": 6379
              }
            ],
            "name": "watchweave-redis-sg",
            "name_prefix": "",
            "owner_id": "872253065579",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "watchweave-redis-sg"
            },
            "tags_all": {
              "Name": "watchweave-redis-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0019715cede0fc3f7"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.ecs",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:872253065579:subnet/subnet-0972411718d90b1a1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0972411718d90b1a1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "872253065579",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "watchweave-private-1"
            },
            "tags_all": {
              "Name": "watchweave-private-1"
            },
            "vpc_id": "vpc-0019715cede0fc3f7"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:872253065579:subnet/subnet-0c75320e091d65b52",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c75320e091d65b52",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "872253065579",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "watchweave-private-2"
            },
            "tags_all": {
              "Name": "watchweave-private-2"
            },
            "vpc_id": "vpc-0019715cede0fc3f7"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:872253065579:subnet/subnet-0b4f8435244e0d1e4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b4f8435244e0d1e4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "872253065579",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "watchweave-public-1"
            },
            "tags_all": {
              "Name": "watchweave-public-1"
            },
            "vpc_id": "vpc-0019715cede0fc3f7"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:872253065579:subnet/subnet-07261b75c31f02c9f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07261b75c31f02c9f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "872253065579",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "watchweave-public-2"
            },
            "tags_all": {
              "Name": "watchweave-public-2"
            },
            "vpc_id": "vpc-0019715cede0fc3f7"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:872253065579:vpc/vpc-0019715cede0fc3f7",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-09c9c17f836a25820",
            "default_route_table_id": "rtb-087081562f58227f4",
            "default_security_group_id": "sg-0df4729a3dd2d5910",
            "dhcp_options_id": "dopt-08b9f0163f8f48b75",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0019715cede0fc3f7",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-087081562f58227f4",
            "owner_id": "872253065579",
            "tags": {
              "Name": "watchweave-vpc"
            },
            "tags_all": {
              "Name": "watchweave-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}